crates/keron-lang/tests/corpus/errors/check/coalesce_non_nullable_lhs.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `??` requires the left side to be a nullable type (`T?`), found `Int`
  --> 1:14
  |
1 | val x: Int = 1 ?? 2
  |              ^
